Bug 164852 - Fake instances of apps in task manager!
Summary: Fake instances of apps in task manager!
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 166924 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-24 19:53 UTC by x.para
Modified: 2008-11-10 10:53 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fake systray (729.23 KB, image/png)
2008-06-25 00:12 UTC, x.para
Details
fake systray (395.50 KB, image/png)
2008-06-25 12:41 UTC, x.para
Details
Fake "100% de 3.2 KB (copiando)" (517.29 KB, image/png)
2008-06-25 17:26 UTC, Rafael Fernández López
Details

Note You need to log in before you can comment on or make changes to this bug.
Description x.para 2008-06-24 19:53:42 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Icon of an running application is not removed from task manager if this apps were initialized by clicking on their systray icon before. It was observed on kopete, kmix, kwallet, ekiga. So opening 10x kopete makes 10 records of fake running instances in task manager. These instances are not removed even when apps is ultimately closed.
Comment 1 Aaron J. Seigo 2008-06-24 23:52:00 UTC
i can't reproduce this here with any systray icons. can you perhaps provide some screenshots along with more detailed "how to reproduce" instructions?
Comment 2 x.para 2008-06-25 00:07:09 UTC
To reproduce, try open and close apps like kopete as fast as you can clicking on their systray icon. I noticed, if I do it slower it works as it should. Screenshot attached.
Comment 3 x.para 2008-06-25 00:12:28 UTC
Created attachment 25578 [details]
fake systray
Comment 4 FiNeX 2008-06-25 11:07:07 UTC
I cannot reproduce this bug too.
@x.para: which revision did you compile?
Comment 5 x.para 2008-06-25 12:40:32 UTC
I am on 824229. I did some more observation and it is ahppening always when applicatiosn are closed NOT by klicking on kwin closing cross in right corner. like alt+f2 makes the same thing here.
Comment 6 x.para 2008-06-25 12:41:56 UTC
Created attachment 25594 [details]
fake systray
Comment 7 Rafael Fernández López 2008-06-25 17:26:36 UTC
Created attachment 25602 [details]
Fake "100% de 3.2 KB (copiando)"

I can confirm this bug. It also happens here with certain tasks, for example
with KWidgetJobTracker. Has happened with Konqueror and other apps too. After
closing the application the entry on the taskbar was still there.
Comment 8 x.para 2008-06-25 19:33:28 UTC
Maybe I found another solution. Try to remove ~/.kdesvn/share/config/plasma-appletsrc and start to config your plasma again. I started from the scratch and problem is not observerd any more. It looks that compatibility issue of plasma config is still poping up as I already remedied several odd behaviours of plasma by simple removing its config file. This should be polished or at least there should be pop up message to advice to remove config file after you sync up.
Comment 9 FiNeX 2008-06-25 22:37:26 UTC
Thanks x.para, this is good :-)

@Rafael: what does happen if you use a clean configuration too?
Comment 10 Aaron J. Seigo 2008-09-05 20:59:32 UTC
*** Bug 166924 has been marked as a duplicate of this bug. ***
Comment 11 charlie bradley 2008-09-22 04:46:10 UTC
I can also confirm this bug.  It happens with every app I open and eventually close.  The application icon does not disappear from taskbar.  Using kde 3.5.10 with external task bar at top of screen and auto hide. 
Kubuntu 8.04 HH amd64
compiz-fusion 
Comment 12 Aaron J. Seigo 2008-09-22 23:06:39 UTC
@Charlie Bradley: if you're using kde 3.5.10, that's a different bit of software than plasma, which is kde4-only =). in your case, it's a compiz related problem; i've seen this happen with others who run compiz.

as for this exact report, yes, i still can't reproduce it no matter what i try here. =/

the "removed plasmarc" sounds very fishy, though. with all available settings in the taskbar widget, though, it still works properly. *shrug*
Comment 13 Aaron J. Seigo 2008-11-10 10:17:52 UTC
still can't reproduce, and both the tasks lib and the tasks widget have been signficantly altered since the reporting.
Comment 14 lucas 2008-11-10 10:40:44 UTC
To reproduce enable "only show tasks from the current screen" then run and close KRunner a few times.
Comment 15 Jason Stubbs 2008-11-10 10:49:17 UTC
(In reply to comment #14)
> To reproduce enable "only show tasks from the current screen" then run and
> close KRunner a few times.

Are you running 4.1 or trunk? I get/got this issue with a 4.1 gentoo installation on an nvidia twinview system and turning on the "only show tasks from current screen/desktop" options made it go away. I haven't had it on trunk at all (even when it was still 4.1) on a single screen system.
Comment 16 Aaron J. Seigo 2008-11-10 10:53:07 UTC
SVN commit 882288 by aseigo:

always be sure to remove tasks from the geometry list; otherwise they hang around in memory and end up with phantom buttons (or worse!)

BUG:164852


 M  +22 -17    groupmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=882288