always be sure to remove tasks from the geometry list; otherwise they hang around in memory and end up with phantom buttons (or worse!)

BUG:164852

svn path=/trunk/KDE/kdebase/workspace/; revision=882288